# data-lake-sandbox

./: .gitignore  Makefile  Pipfile  README.md  docker-compose.yaml
.github/: stack_2_ci.yaml
.github/workflows/: stack_2_ci.yaml
etl/: load.py
stack_1/: docker-compose.yaml
stack_1/data_pipelines/: load.py
stack_2/: Makefile  Pipfile  README.md  docker-compose.yaml
stack_2/jaffle/jaffle/: duckpond.py  repository.py
stack_2/jaffle/jaffle/assets/: __init__.py
stack_2/jaffle/jaffle_tests/: test_duckpond.py
stack_2/src/: README.md  duckpond.py  pyproject.toml  repository.py  setup.py
stack_2/src/assets/: __init__.py
stack_2/src/jaffle/: __init__.py  duckpond.py
stack_2/src/jaffle/assets/: __init__.py
stack_2/src/jaffle_tests/: test_assets.py  test_duckpond.py
stack_2/terraform/: provider.tf
stack_2/tests/: test_assets.py  test_duckpond.py
stack_3/: README.md
stack_3/src/jaffle/: duckpond.py
stack_3/src/jaffle/assets/: __init__.py  transformations.py
stack_3/src/jaffle_tests/: test_assets.py  utils.py
stack_3/terraform/: terraform.tfvars
