[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "jaffle"

[tool.pytest.ini_options]
pythonpath = [
"."
]

[tool.isort]
profile = "black"
case_sensitive=true

[tool.pylint.messages_control]
max-line-length = 110

disable = "C0114, C3001, W0237, W0621, R0903"